# ChillBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  class_updater.py  dbutils.py  faq_manager.py  main.py  pyproject.toml  requirements.txt
storage/: faq_entries.json
