[project]
name = "chillbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1 ; python_full_version >= '3.9'",
    "aiohttp==3.11.18 ; python_full_version >= '3.9'",
    "aiosignal==1.3.2 ; python_full_version >= '3.9'",
    "attrs==25.3.0 ; python_full_version >= '3.8'",
    "certifi==2025.4.26 ; python_full_version >= '3.6'",
    "charset-normalizer==3.4.2 ; python_full_version >= '3.7'",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "filelock==3.18.0 ; python_full_version >= '3.9'",
    "frozenlist==1.6.0 ; python_full_version >= '3.9'",
    "fsspec==2025.3.2 ; python_full_version >= '3.9'",
    "huggingface-hub==0.31.4 ; python_full_version >= '3.8'",
    "idna==3.10 ; python_full_version >= '3.6'",
    "jinja2==3.1.6 ; python_full_version >= '3.7'",
    "joblib==1.5.0 ; python_full_version >= '3.9'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "mpmath==1.3.0",
    "multidict==6.4.4 ; python_full_version >= '3.9'",
    "networkx==3.4.2 ; python_full_version >= '3.10'",
    "numpy==2.2.6 ; python_full_version >= '3.10'",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "pillow==11.2.1 ; python_full_version >= '3.9'",
    "propcache==0.3.1 ; python_full_version >= '3.9'",
    "py-cord==2.6.1 ; python_full_version >= '3.8'",
    "python-dotenv==1.1.0 ; python_full_version >= '3.9'",
    "pyyaml==6.0.2 ; python_full_version >= '3.8'",
    "regex==2024.11.6 ; python_full_version >= '3.8'",
    "requests==2.32.3 ; python_full_version >= '3.8'",
    "safetensors==0.5.3 ; python_full_version >= '3.7'",
    "scikit-learn==1.6.1 ; python_full_version >= '3.9'",
    "scipy==1.15.3 ; python_full_version >= '3.10'",
    "sentence-transformers==4.1.0 ; python_full_version >= '3.9'",
    "setuptools==80.7.1 ; python_full_version >= '3.9'",
    "sympy==1.14.0 ; python_full_version >= '3.9'",
    "threadpoolctl==3.6.0 ; python_full_version >= '3.9'",
    "tokenizers==0.21.1 ; python_full_version >= '3.9'",
    "torch==2.7.0 ; python_full_version >= '3.9'",
    "tqdm==4.67.1 ; python_full_version >= '3.7'",
    "transformers==4.51.3 ; python_full_version >= '3.9'",
    "typing-extensions==4.13.2 ; python_full_version >= '3.8'",
    "urllib3==2.4.0 ; python_full_version >= '3.9'",
    "yarl==1.20.0 ; python_full_version >= '3.9'",
]
