[project]
name = "chillbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "attrs",
    "certifi",
    "charset-normalizer",
    "colorama",
    "filelock",
    "frozenlist",
    "fsspec",
    "huggingface-hub",
    "idna",
    "jinja2",
    "joblib",
    "markupsafe",
    "mpmath",
    "multidict",
    "networkx",
    "numpy",
    "packaging",
    "pillow",
    "propcache",
    "py-cord",
    "python-dotenv",
    "pyyaml",
    "regex",
    "requests",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "setuptools",
    "sympy",
    "threadpoolctl",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
    "typing-extensions",
    "urllib3",
    "yarl",
]
